Latest Commit by talal

--- a/NFL-Workflow/MasterPage/NFL_Master.master
+++ b/NFL-Workflow/MasterPage/NFL_Master.master
@@ -72,7 +72,8 @@
     <script type="text/javascript" src="../Scripts/VisitRequest.js"></script>
     <script type="text/javascript" src="../Scripts/VisitRequestApproval.js"></script>
     <script type="text/javascript" src="../Scripts/CorporateEvent.js"></script>
-    
+    <script type="text/javascript" src="../Scripts/Home.js"></script>
+    <script type="text/javascript" src="../Scripts/VisitRequestView.js"></script>
 
     </asp:ContentPlaceHolder>
 
